--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,5 @@ cython_debug/
 .pdm-python
 react_stock/node_modules
 react_stock/package-lock.json
+react_stock/node_modules
+react_stock/package-lock.json
